# websocket-control-stackchan

./: .editorconfig  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  platformio-m5stack.ini  platformio.ini  pyproject.toml
.github/prompts/: burn.prompt.md  fix-lint.md  update-agents.md
.github/workflows/: pr-lint-typecheck.yml
app/: echo.py  gemini.py  main.py
docs/: development.md  firmware_ja.md  google_cloud_ja.md  platformio_ja.md  protocols.md  rest-api_ja.md  setup_ja.md
example_apps/: echo.py  echo_with_move.py  gemini.py
example_apps/claude_agent_sdk/: claude_agent_sdk.py
example_apps/claude_agent_sdk/workspace/: README.md
example_apps/deepagents/: app.py
firmware/include/: config.template.h  display.hpp  listening.hpp  mic.hpp  protocols.hpp  servo.hpp  speaking.hpp  state_machine.hpp  wake_up_word.hpp
firmware/lib/ESP_SR_M5Unified/: README.md
firmware/lib/ESP_SR_M5Unified/include/: ESP_SR_M5Unified.h
firmware/lib/ESP_SR_M5Unified/src/: ESP_SR_M5Unified.cpp  esp32-hal-sr-m5.c
firmware/src/: display.cpp  listening.cpp  main.cpp  mic.cpp  servo.cpp  speaker.cpp  speaking.cpp  state_machine.cpp  wake_up_word.cpp
include/: protocols.hpp  speaker.hpp
lib/ESP_SR_M5Unified/: library.properties
lib/ESP_SR_M5Unified/include/: esp32-hal-sr-m5.h
misc/ESP_SR/: flash_srmodels.py
misc/api_test/: test_cloud_sst.py  test_gemini.py
misc/whisper-server/: run-whisper-server.sh
server/: main.py  test_cloud_sst.py  test_voicevox.py
src/: config.template.h  main.cpp  mic.cpp  speaker.cpp
stackchan_server/: app.py  listen.py  speak.py  static.py  types.py  ws_proxy.py
stackchan_server/speech_recognition/: __init__.py  google_cloud.py  whisper_cpp.py  whisper_server.py
stackchan_server/speech_synthesis/: __init__.py  google_cloud.py  voicevox.py
tests/: test_whisper_server.py
tmp/: main.cpp
